# phone-music-tracker

./: .gitignore  API_PATHS_AND_VARIABLES.md  CLAUDE.md  CLAUDE_CRITICAL.md  CLAUDE_LESSONS.md  CURRENT_WORK.md  DOCUMENTATION_INDEX.md  FIXING_ERRORS_LOG.md  FIX_PLAN_QUICK_REFERENCE.md  FORUM_FIX_SUMMARY.md  FORUM_GREENLET_FIX_SUMMARY.md  HYBRID_SESSION_SOLUTION.md  INTEGRATION_STATUS.md  MUSIC_TRACKER_FIX_PLAN.md  MUSIC_TRACKER_TECHNICAL_REPORT.md  Makefile  NEXT_STEPS.md  PRACTICE_PARTNER_TESTING_GUIDE.md  PRECOMMIT_CHECKLIST.md  PROGRESS_2025_01_07.md  PROJECT_PLAN.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  TEST_CONNECTIVITY.md  USER_GUIDE.md  VIDEO_PROCESSING_FLOW.md  VIDEO_UPLOAD_FINAL_SOLUTION.md  WINDOWS_PORT_FORWARDING.ps1  check-all-services.sh  docker-compose.dev.yml  docker-compose.yml  fix-mobile-connection.sh  test-auth-api.sh  test_auto_challenges.sh  test_tags.sh  功能驗證說明.md
backend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.worker  README.md  celerybeat-schedule  create_test_users.py  process_user_video.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_manual_processing.py
backend/app/: main.py
backend/docs/: video-upload-api.md
backend/migrations/: add_challenges_achievements.sql  add_forum_media_table.sql  add_forum_related_piece.sql  add_notification_preferences.sql  add_partner_notification_types.sql  add_piece_archive_fields.sql  add_practice_partner_matching.sql  add_practice_segments.sql  add_push_token_to_users.sql  add_reputation_system.sql  add_sample_pieces_and_goals.sql  (+8 more)
(+322 files in other folders)
